--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,18 @@
-/* Add your own CSS rules here */
-h1 {
-  text-align: center;
-}
+* {margin:0;
+	padding:0;
+	/*to avoid a gap*/}
+
+body {background-color:#DBDBDB;
+		background-position:center;
+		background-repeat:no-repeat;
+		background-attachment:fixed;
+		background-size:cover;
+		margin:0;
+		padding:0;
+		text-align:center;}
+
+h1 {text-align: center;}
+
 
 g[class='note'] {
   color: red;
